[tool.poetry]
name = "django tailalpinex"
version = "0.1.0"
description = ""
authors = ["nils3311 <hofnil@web.de>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
django-tailwind = "^3.4.0"
django-widget-tweaks = "^1.4.12"
django-htmx = "^1.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
